# draw-together

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  install-dependencies-debug.bat  install-dependencies-debug.sh  install-dependencies.bat  install-dependencies.sh
doc/: architecture.uxf
src/: CMakeLists.txt
src/filesystem_service/: CMakeLists.txt
src/filesystem_service/include/: filesystem.h  resource.h
src/image_storing_service/image_importer/: CMakeLists.txt
src/network_service/: CMakeLists.txt
src/network_service/src/: network_service.cpp
src/user_command_executor/: CMakeLists.txt
src/user_command_executor/src/: user_command_executor.cpp
src/user_interface/: CMakeLists.txt
src/user_interface/include/: drawtogether.h  renderarea.h
src/user_interface/src/: colorwheel.cpp  drawtogether.cpp  drawtogether.ui  main.cpp  renderarea.cpp
